Fixed Time display layout issues

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -20,6 +20,10 @@ body {
       th, td {
         vertical-align: middle;
         text-align: center;
+
+        .month-day {
+          white-space: nowrap;
+        }
       }
       .user-area {
 
